# Tapestry

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_RUNBOOK.md  DOCKER.md  LAUNCH_REVIEW_SUMMARY.md  LICENSE  README.md  TAPESTRY_PRD_AND_SYSTEM_DESIGN.md  docker-compose-wrapper.sh  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
.roo/: mcp.json
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  data.db  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20240101_000000_001_initial_schema.py  20240101_000000_002_add_password_reset_tokens.py  20240101_000000_003_add_qr_code_sessions.py  20240101_000000_004_add_chore_completions.py  20240101_000000_005_add_max_completions.py
backend/app/: __init__.py  config.py  logging_config.py  main.py  middleware.py
backend/app/ai/: chore_graph.py
backend/app/db/: session.py
backend/app/models/: models.py  models.ts
backend/app/routers/: auth.py  calendars.py  chores.py  families.py  goals.py  points.py  users.py
backend/app/schemas/: schemas.py
backend/tests/: conftest.py  test_auth.py  test_health.py
docs/: PRODUCTION_CHECKLIST.md  RECURRING_CHORES.md  STYLE_GUIDE.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx  LoadingStates.tsx  ParticipantSelector.tsx  ProtectedRoute.tsx  QRCodeLoginDialog.tsx  (+2 more)
(+54 files in other folders)
