[project]
name = "backend"
version = "0.1.0"
description = "Tapestry - Family calendar, chores, and rewards API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langgraph>=0.6.3",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0.7",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
